--- a/package.json
+++ b/package.json
@@ -1,33 +1,42 @@
 {
-  "name": "next-nest-template",
+  "name": "schpincer-frontend",
   "version": "0.0.0",
-  "description": "Template repository for full-stack NestJS + NextJS projects",
+  "description": "New React based frontend for SchPincer",
   "author": "Kir-Dev",
   "license": "MIT",
-  "private": true,
-  "resolutions": {
-    "wrap-ansi": "7.0.0",
-    "string-width": "4.1.0"
-  },
   "scripts": {
-    "start:backend": "cd apps/backend && yarn start:dev",
-    "start:frontend": "cd apps/frontend && yarn dev",
-    "build:backend": "cd apps/backend && yarn build",
-    "build:frontend": "cd apps/frontend && yarn build",
-    "lint": "eslint apps/* --ext .ts,.tsx --max-warnings 0",
-    "lint:fix": "eslint apps/* --ext .ts,.tsx --fix",
-    "format": "prettier --write apps",
-    "format:check": "prettier --check apps"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint src/* --ext .ts,.tsx --max-warnings 0",
+    "lint:fix": "eslint src/* --ext .ts,.tsx --fix",
+    "format": "prettier --write src/*",
+    "format:check": "prettier --check src/*"
+  },
+  "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.378.0",
+    "next": "14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/node": "^20.12.11",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5",
+    "eslint-plugin-react": "^7.34.1",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.2",
+    "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-simple-import-sort": "^12.1.0",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
     "prettier": "^3.2.5"
-  },
-  "workspaces": [
-    "apps/*"
-  ]
+  }
 }
